fixed desc page row gap in filters page and margin left in mobile version

--- a/UBC-Sublet/src/components/styles/desc.css
+++ b/UBC-Sublet/src/components/styles/desc.css
@@ -489,7 +489,7 @@
 .frame7,
 .macbook-air-2,
 .send-button {
-  overflow: hidden;
+  overflow: scroll;
   display: flex;
   flex-direction: column;
 }
